--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,8 @@
     "@headlessui/react": "^1.6.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -21,6 +22,8 @@
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
-    "vite": "^2.9.7"
+    "vite": "^2.9.7",
+    "@tailwindcss/forms": "^0.5.1",
+    "tailwind-scrollbar": "^1.3.1"
   }
 }
